# reductionist-rs

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  index.html  milestone4.md  mkdocs.yml  sitemap.xml
.cargo/: config.toml
.github/workflows/: publish-docs.yml  publish.yml  pull-request.yml
api/: index.html
architecture/: index.html
benches/: byte_order.rs  compression.rs  operations.rs  s3_client.rs  shuffle.rs
compressors/: index.html
contributing/: index.html
deployment/: README.md  index.html  inventory  requirements.txt  site.yml
deployment/group_vars/: all  haproxy  prometheus  reductionist  step  step-ca
deployment/templates/: haproxy.cfg.j2  prometheus.yml.j2  reductionist-cert-renewer.service.j2  reductionist-cert-renewer.timer.j2
docs/: api.md  architecture.md  compressors.md  contributing.md  deployment.md  filters.md  index.md  pyactivestorage.md  storage.md
filters/: index.html
pyactivestorage/: index.html
scripts/: client.py  docker-compose.yml  htpasswd  minio-run  minio-start  minio-stop  nginx-ssl-start  nginx-ssl.conf  nginx-start  nginx-stop  nginx.conf  parallel-client.py  prometheus.yml  requirements.txt  storage-start  storage-stop  test-errors.sh  upload_sample_data.py
search/: search_index.json
src/: app.rs  app_state.rs  array.rs  chunk_cache.rs  chunk_downloader_http.rs  chunk_downloader_s3.rs  chunk_store.rs  cli.rs  compression.rs  error.rs  filter_pipeline.rs  filters.rs  lib.rs  main.rs  metrics.rs  models.rs  operation.rs  operations.rs  resource_manager.rs  s3_client.rs  server.rs  test_utils.rs  tracing.rs  types.rs  validated_json.rs
src/filters/: shuffle.rs  shuffle_simd.rs
src/types/: byte_order.rs  dvalue.rs  missing.rs
storage/: index.html
tools/: pre-commit
