[package]
name = "s3-active-storage"
version = "0.1.0"
edition = "2021"
# Due to AWS SDK.
rust-version = "1.62.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
aws-credential-types = { version = "0.55", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "0.27"
aws-smithy-http = "0.55"
aws-smithy-types = "0.55"
aws-types = "0.55"
# Axum 0.6.13 introduced a change in behaviour around trimming trailing paths.
axum = { version = "=0.6.12", features = ["headers"] }
axum-server = { version = "0.4.7", features = ["tls-rustls"] }
clap = { version = "4.2", features = ["derive", "env"] }
expanduser = "1.2.2"
http = "*"
hyper = { version = "0.14", features = ["full"] }
maligned = "0.2.1"
mime = "0.3"
ndarray = "0.15"
ndarray-stats = "0.5"
num-traits = "0.2.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
strum_macros = "0.24"
thiserror = "1.0"
tokio = { version = "1.28", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["normalize-path", "trace", "validate-request"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
zerocopy = { version = "0.6.1", features = ["alloc", "simd"] }

[dev-dependencies]
regex = "1"
serde_test = "1.0"
