[package]
name = "reductionist"
version = "0.4.0"
edition = "2021"
# Due to AWS SDK.
rust-version = "1.66.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
aws-credential-types = { version = "0.55", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "0.27"
aws-smithy-http = "0.55"
aws-smithy-types = "0.55"
aws-types = "0.55"
axum = { version = "0.6", features = ["headers"] }
axum-server = { version = "0.4.7", features = ["tls-rustls"] }
clap = { version = "4.2", features = ["derive", "env"] }
expanduser = "1.2.2"
flate2 = "1.0"
http = "*"
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4"
maligned = "0.2.1"
mime = "0.3"
ndarray = "0.15"
ndarray-stats = "0.5"
num-traits = "0.2.15"
prometheus = { version = "0.13", features = ["process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
strum_macros = "0.24"
thiserror = "1.0"
tokio = { version = "1.28", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["normalize-path", "trace", "validate-request"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
zerocopy = { version = "0.6.1", features = ["alloc", "simd"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
regex = "1"
serde_test = "1.0"

[[bench]]
name = "shuffle"
harness = false

[[bench]]
name = "compression"
harness = false
