[package]
name = "reductionist"
version = "0.10.0"
edition = "2021"
# Due to AWS SDK.
rust-version = "1.78.0"
license = "Apache-2.0"
description = "S3 Active Storage server"
homepage = "https://crates.io/crates/reductionist"
documentation = "https://docs.rs/reductionist"
repository = "https://github.com/stackhpc/reductionist-rs"
readme = "README.md"
authors = ["Mark Goddard <mark@stackhpc.com>", "Scott Davidson <scott@stackhpc.com>"]
keywords = ["s3", "ndarray"]
# https://crates.io/category_slugs
categories = ["mathematics", "science", "simulation"]

[badges]
maintenance = { status = "actively-developed" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
# Uncomment this to improve flamegraphs.
# debug = true

[dependencies]
async-trait = "0.1"
aws-credential-types = { version = "1.2", features = ["hardcoded-credentials"] }
aws-sdk-s3 = "1.49"
aws-smithy-http = "0.60"
aws-smithy-runtime-api = "1.7"
aws-smithy-types = "1.2"
aws-types = "1.3"
axum = { version = "0.6", features = ["headers"] }
axum-server = { version = "0.4.7", features = ["tls-rustls"] }
clap = { version = "~4.5", features = ["derive", "env"] }
expanduser = "1.2.2"
flate2 = "1.0"
hashbrown = "0.14"
http = "1.1"
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.5"
maligned = "0.2.1"
mime = "0.3"
ndarray = "0.15"
ndarray-stats = "0.5"
num_cpus = "1"
num-traits = "0.2.16"
opentelemetry = "0.20"
opentelemetry-jaeger = { version = "0.19", features = ["rt-tokio"] }
prometheus = { version = "0.13", features = ["process"] }
rayon = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum_macros = "0.24"
thiserror = "1.0"
time = "= 0.3.23"
tokio = { version = "1.28", features = ["full"] }
tokio-rayon = "2.1"
tower = "0.4"
tower-http = { version = "0.4", features = ["normalize-path", "trace", "validate-request"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-opentelemetry = "0.21"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }
validator = { version = "0.16", features = ["derive"] }
zerocopy = { version = "0.6.1", features = ["alloc", "simd"] }
zune-inflate = "0.2.54"
cached = { version = "0.54.0", features = ["disk_store", "async"] }
bytes = { version = "1.9.0", features = ["serde"] }
uuid = { version = "1.12.1", features = ["v4"] }

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio", "html_reports"] }
regex = "1"
serde_test = "1.0"

[[bench]]
name = "byte_order"
harness = false

[[bench]]
name = "operations"
harness = false

[[bench]]
name = "s3_client"
harness = false

[[bench]]
name = "shuffle"
harness = false

[[bench]]
name = "compression"
harness = false
